--- a/FungiGut.yml
+++ b/FungiGut.yml
@@ -4,7 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - nextflow=25.04.6.5954
+  - nextflow>=25.04
   - fastp
   - bowtie2
   - python=3.10
